# fiverr-copilot

./: .gitignore  ARCHITECTURE.md  README.md  WIREFRAMES.md  demo.py
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/core/: config.py  database.py  security.py
backend/models/: __init__.py  conversation.py  fiverr_account.py  gig.py  template.py  user.py
backend/routers/: auth.py  extension.py  gigs.py  inbox.py  users.py
backend/schemas/: gig.py  inbox.py  user.py
backend/services/: ai.py
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_extension.py  test_gigs.py  test_inbox.py
browser-extension/: README.md  manifest.firefox.json  manifest.json
browser-extension/scripts/: build.sh
browser-extension/src/: background.js  content-script.js
browser-extension/src/panel/: panel.css
browser-extension/src/popup/: popup.html  popup.js
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/gigs/: page.tsx
frontend/src/app/(app)/gigs/[id]/: page.tsx
frontend/src/app/(app)/gigs/new/: page.tsx
frontend/src/app/(app)/inbox/: page.tsx
frontend/src/app/(app)/keywords/: page.tsx
frontend/src/app/(app)/settings/: page.tsx
frontend/src/app/(app)/templates/: page.tsx
frontend/src/app/(auth)/: page.tsx
frontend/src/components/dashboard/: ActivityFeed.tsx  GigScoreCard.tsx  OverdueAlert.tsx  ResponseTimerWidget.tsx
frontend/src/components/layout/: AppShell.tsx  MobileNav.tsx  Sidebar.tsx
(+2 files in other folders)
