[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.package-dir]
backend = "."

[project]
name = "fiverr-copilot-backend"
version = "1.0.0"
description = "Fiverr Gig & Inbox Copilot backend"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["backend*"]
